--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ html, body {
     flex-direction: column;
 }
 
+ul {
+    list-style: none;
+}
+
 header {
     background-color: #2c3e50;
     color: white;
@@ -115,11 +119,51 @@ button.remove:hover {
 }
 
 /* ===== Корзина ===== */
-.cart-actions {
-    display: flex;
-    gap: 8px;
-    margin-top: 10px;
+.basket-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
+
+.basket-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 10px;
+  border: 2px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  margin-bottom: 10px;
+}
+
+.quantity-controls {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.quantity-controls .quantity {
+  font-weight: bold;
+  font-size: 16px;
+  min-width: 20px;
+  text-align: center;
+}
+
+.price-counter {
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+    background: #fff;
+    padding: 10px;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    margin-bottom: 10px;
+    margin-left: 40px;
+}
+
 
 footer {
     background: #2c3e50;
@@ -146,7 +190,7 @@ footer {
         gap: 15px;
     }
 
-    .catalog-list, .cart-list {
+    .catalog-list, .basket-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
@@ -172,7 +216,7 @@ footer {
         padding: 10px 16px; 
     }
 
-    catalog-list, .cart-list {
+    catalog-list, .basket-list {
         grid-template-columns: repeat(3, 1fr);
     }
 }
